k8s/node-shell.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: node-shell
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-shell
  namespace: node-shell
spec:
  selector:
    matchLabels:
     app: node-shell
  template:
    metadata:
      labels:
        app: node-shell
    spec:
      containers:
      - name: node-shell
        image: alpine:3.15
        command: ["sh", "-c", "while sleep 3600; do :; done"]
