k8s/home-db.yml
kind: Namespace
apiVersion: v1
metadata:
  name: home-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: home-db 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      # TODO: Memory limits to ensure it gets on a node with sufficient capacity.
      containers:
      - image: mariadb:10.6.3
        name: mariadb
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: home-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: home-db
spec:
  selector:
    app: mariadb
  type: LoadBalancer
  loadBalancerIP: 192.168.2.2
  ports:
  - port: 3306
