k8s/golinks.yml
kind: Namespace
apiVersion: v1
metadata:
  name: golinks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: golinks
  name: golinks
  namespace: golinks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golinks
  template:
    metadata:
      labels:
        app: golinks
    spec:
      containers:
        - name: golinks
          image: ghcr.io/tailscale/golink:main
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0
          volumeMounts:
            - name: golinks-persistent-storage
              mountPath: /home/nonroot
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
      volumes:
        - name: golinks-persistent-storage
          nfs:
            server: 192.168.1.106
            path: /volume1/k8s/golinks
---
apiVersion: v1
kind: Service
metadata:
  name: golinks-svc
  namespace: golinks
spec:
  type: ClusterIP
  selector:
    app: golinks
  ports:
  - port: 80
    targetPort: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: golinks
  namespace: golinks
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("go.analogrelay.net")
      services:
        - kind: Service
          name: golinks-svc
          namespace: golinks
          port: 80
