k8s/plex.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: plex
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: "ghcr.io/linuxserver/plex"
          ports:
            - name: http
              containerPort: 32400
              protocol: TCP
            - name: dlna
              containerPort: 1900
              protocol: UDP
            - name: bonjour
              containerPort: 5353
              protocol: UDP
          volumeMounts:
            - name: plex-persistent-storage
              mountPath: /config
            - name: media-storage
              mountPath: /media
      volumes:
        - name: plex-persistent-storage
          nfs:
            server: 192.168.1.106
            path: /volume1/k8s/plex
        - name: media-storage
          nfs:
            server: 192.168.1.106
            path: /volume1/media
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  type: ClusterIP
  selector:
    app: plex
  ports:
  - port: 32400
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: plex
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("plex.local.analogrelay.net")
      middlewares:
        - name: strip-plex-prefix
          namespace: plex
      services:
        - kind: Service
          name: plex
          namespace: plex
          port: 32400
