k8s/whoami.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: "traefik/whoami"
          args:
            - "--port"
            - "8080"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-whoami-prefix
spec:
  stripPrefix:
    prefixes:
      - /whoami
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/whoami`) 
      middlewares:
        - name: strip-whoami-prefix
          namespace: default
      services:
        - kind: Service
          name: whoami
          namespace: default
          port: 8080
